# radar

./: .env  .gitignore  .rsyncignore  BACKWARDS_COMPATIBILITY_TESTS.md  CONTRIBUTING.md  Makefile  README.md  SOLIDITY_SUPPORT_COMPLETE.md  demo.ipynb  docker-compose-dev.yml  docker-compose.yml  install-radar.sh  radar  radar.sh  test-dockerfile  update-radar.sh
api/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
api/api/: admin.py  asgi.py  celery.py  models.py  serializers.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
api/api/migrations/: 0001_initial.py  0002_generatedast_language.py  0003_generatedast_framework.py
api/builtin_templates/:  division_before_multiplication.yaml  account_data_matching.yaml  account_precreation_dos.yaml  account_reinitialization.yaml  anchor_admin_without_timelock.yaml  anchor_missing_min_output.yaml  anchor_spot_price_oracle.yaml  approve_on_max_allowance.yaml  arbitrary_cpi.yaml  chainlink_min_max_circuit_breaker.yaml  closing_accounts.yaml  cpi_authority_bypass.yaml  decimal_to_u64_without_sign_check.yaml  delete_on_struct_with_mapping.yaml  division_before_multiplication.yaml  duplicate_code.yaml  duplicate_imports.yaml  duplicate_mutable_accounts.yaml  emit_after_call.yaml  erc20_permit_deadline_not_checked.yaml  erc4626_share_inflation.yaml  eth_send_or_transfer_usage.yaml  example1.yaml  example2.yaml  exponential_calculation_complexity.yaml  fee_on_transfer_incompatibility.yaml  governance_execute_without_timelock.yaml  hardcoded_external_dependency_address.yaml  immutable_state_mutation.yaml  improper_external_account_access.yaml  incorrect_ceiling_division.yaml  incorrect_token_calculation.yaml  integer_division_overflow.yaml  invalid_function_attributes.yaml  loop_break_continue_confusion.yaml  loss_of_precision.yaml  missing_access_control_initialization.yaml  missing_array_length_equality_check.yaml  missing_bump_seed_canonicalization.yaml  missing_deadline_on_swap.yaml  (+54 more)
api/rust_syn_wrapper/: Cargo.toml
api/rust_syn_wrapper/src/: lib.rs
api/scripts/: generate_mock_ast.py  radar_info.py
api/tests/: test_ast.py  test_cli.py  test_dsl.py  test_templates.py
api/tests/builtin_vulnerable_programs/account_precreation_dos/insecure/: Cargo.toml
api/tests/builtin_vulnerable_programs/account_precreation_dos/secure/: Cargo.toml
api/tests/builtin_vulnerable_programs/cpi_authority_bypass/insecure/: Cargo.toml
api/tests/builtin_vulnerable_programs/cpi_authority_bypass/secure/: Cargo.toml
api/tests/builtin_vulnerable_programs/fee_calculation_bypass/insecure/: Cargo.toml
api/tests/builtin_vulnerable_programs/fee_calculation_bypass/secure/: Cargo.toml
api/tests/builtin_vulnerable_programs/integer_overflow_underflow/insecure/: Cargo.toml
api/tests/builtin_vulnerable_programs/integer_overflow_underflow/secure/: Cargo.toml
api/tests/builtin_vulnerable_programs/precision_loss_math/insecure/: Cargo.toml
api/tests/builtin_vulnerable_programs/precision_loss_math/secure/: Cargo.toml
api/tests/builtin_vulnerable_programs/rent_exemption_validation/insecure/: Cargo.toml
api/tests/builtin_vulnerable_programs/rent_exemption_validation/secure/: Cargo.toml
api/tests/mocks/: ast_mock.json
api/tests/mocks/account_data_matching/bad/: Cargo.toml
api/tests/mocks/account_data_matching/good/: Cargo.toml
api/tests/mocks/account_precreation_dos/bad/: Cargo.toml
api/tests/mocks/account_precreation_dos/good/: Cargo.toml
api/tests/mocks/account_reinitialization/bad/: Cargo.toml
api/tests/mocks/account_reinitialization/good/: Cargo.toml
api/tests/mocks/anchor-test-2/: Anchor.toml  package-lock.json
api/tests/mocks/anchor_admin_without_timelock/bad/: Cargo.toml
api/tests/mocks/anchor_admin_without_timelock/good/: Cargo.toml
api/tests/mocks/anchor_missing_min_output/bad/: Cargo.toml
api/tests/mocks/anchor_missing_min_output/good/: Cargo.toml
api/tests/mocks/anchor_spot_price_oracle/bad/: Cargo.toml
api/tests/mocks/anchor_spot_price_oracle/good/: Cargo.toml
api/tests/mocks/arbitrary_cpi/bad/: Cargo.toml
api/tests/mocks/arbitrary_cpi/good/: Cargo.toml
api/tests/mocks/chainlink_min_max_circuit_breaker/bad/: chainlink_min_max_circuit_breaker.sol
api/tests/mocks/chainlink_min_max_circuit_breaker/good/: chainlink_min_max_circuit_breaker.sol
api/tests/mocks/closing_accounts/bad/: Cargo.toml
api/tests/mocks/closing_accounts/good/: Cargo.toml
api/tests/mocks/closing_accounts_insecurely/bad/: Cargo.toml
api/tests/mocks/closing_accounts_insecurely/good/: Cargo.toml
api/tests/mocks/cpi_authority_bypass/bad/: Cargo.toml
api/tests/mocks/cpi_authority_bypass/good/: Cargo.toml
api/tests/mocks/decimal_to_u64_without_sign_check/bad/: Cargo.toml
api/tests/mocks/decimal_to_u64_without_sign_check/good/: Cargo.toml
api/tests/mocks/division_before_multiplication/bad/: Cargo.toml
api/tests/mocks/division_before_multiplication/good/: Cargo.toml
api/tests/mocks/duplicate_mutable_accounts/bad/: Cargo.toml
api/tests/mocks/solidity_test/: test_contract.sol
api/utils/: ast.py  dsl.py  solidity_compiler.py
api/utils/dsl/: dsl.py  dsl_ast_iterator.py  functions.py  solidity.py
controller/: .dockerignore  Dockerfile  api.py  helpers.py  main.py  pyproject.toml
(+254 files in other folders)
