[tool.poetry]
name = "radar-api"
version = "0.1.0"
description = ""
authors = ["forefy <tomer@auditware.io>"]
license = "GPL-3.0-only"
# readme = "README.md"  # File doesn't exist

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.8"
psycopg2-binary = ">=2.9.10"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
django-jazzmin = "^3.0.0"
djangorestframework = "^3.15.2"
requests = "^2.32.4"
django-json-widget = "^2.0.1"
toml = "^0.10.2"
celery = "^5.4.0"
django-celery-results = "^2.5.1"
watchdog = "^4.0.1"
pyyaml = "^6.0.1"
pytest = "^8.2.2"
solc-select = "^1.0.4"
semantic-version = "^2.10.0"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["active_runtime: Tests that require an active runtime environment to work."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
