[tool.poetry]
name = "radar-manager"
version = "0.1.0"
description = ""
authors = ["forefy <tomer@auditware.io>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
