[package]
name = "cpi-authority-bypass-insecure"
version = "0.1.0"
description = "Test program demonstrating insecure CPI authority patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cpi_authority_bypass_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"