[package]
name = "integer-overflow-underflow-insecure"
version = "0.1.0"
description = "Test program demonstrating insecure integer arithmetic patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "integer_overflow_underflow_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"