[package]
name = "precision-loss-math-insecure"
version = "0.1.0"
description = "Test program demonstrating insecure precision loss patterns"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "precision_loss_math_insecure"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[target.'cfg(not(target_arch = "bpf"))'.dependencies]
solana-sdk = "~1.16.0"